<resources>
    <string name="app_name">UW GPA</string>

    <string name="questid">Quest ID</string>
    <string name="login">Login</string>
    <string name="disclaimer">Your login credentials will only be used to login to Quest. They will be stored using Google Credential API (e.g.
        Google stores your password), Netflix uses this same technique.</string>
    <string name="hi">Hi</string>
    <string name="title_activity_grade">GradeActivity</string>
    <string name="notification_disclaimer">Please ensure you have enabled Google Credential, otherwise this might not work.
        Try keep this app running in the background. The app will try to pull your grades and check for an update every 30 minutes.
        You will be notified to re-login if a pull is unsuccessful.
        If you are done with the grades please click stop notification to turn off the service. </string>
    <string name="grade_notification_btn">Current Grade &amp; Notification</string>
    <string name="sign_out">Sign Out</string>
</resources>
